--- a/Step2Moscow/res/layout/menu_item1.xml
+++ b/Step2Moscow/res/layout/menu_item1.xml
@@ -3,7 +3,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:background="@drawable/menu_background_unselect">
+                android:background="@drawable/menu_background_unselect"
+                android:id="@+id/menu_item1_bg">
 
     <TextView
             android:layout_width="wrap_content"
