--- a/Step2Moscow/res/layout/activity_main.xml
+++ b/Step2Moscow/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:background="@drawable/background">
 
 		<android.support.v4.view.ViewPager
-		android:id="@+id/pager"
+		android:id="@+id/main"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		android:gravity="center" />
