--- a/Step2Moscow/res/values/styles.xml
+++ b/Step2Moscow/res/values/styles.xml
@@ -1,5 +1,69 @@
 <resources>
 
-			<style name="AppTheme" parent="@style/Theme.Sherlock.Light" />
+    <style name="AppTheme" parent="@style/Theme.Sherlock.Light">
+        <item name="actionBarItemBackground">@drawable/selectable_background_example</item>
+        <item name="popupMenuStyle">@style/PopupMenu.Example</item>
+        <item name="dropDownListViewStyle">@style/DropDownListView.Example</item>
+        <item name="actionBarTabStyle">@style/ActionBarTabStyle.Example</item>
+        <item name="actionDropDownStyle">@style/DropDownNav.Example</item>
+        <item name="actionBarStyle">@style/ActionBar.Solid.Example</item>
+        <item name="actionModeBackground">@drawable/cab_background_top_example</item>
+        <item name="actionModeSplitBackground">@drawable/cab_background_bottom_example</item>
+        <item name="actionModeCloseButtonStyle">@style/ActionButton.CloseMode.Example</item>
+        <item name="actionBarTabTextStyle">@style/ActionBar.Tab.TextColor</item>
 
+
+    </style>
+
+    <style name="ActionBar.Solid.Example" parent="@style/Widget.Sherlock.Light.ActionBar.Solid">
+        <item name="background">@drawable/ab_solid_example</item>
+        <item name="backgroundStacked">@drawable/ab_stacked_solid_example</item>
+        <item name="backgroundSplit">@drawable/ab_bottom_solid_example</item>
+        <item name="progressBarStyle">@style/ProgressBar.Example</item>
+    </style>
+
+    <style name="ActionBar.Tab.TextColor" parent="@style/Widget.Sherlock.ActionBar.TabText">
+        <item name="android:textColor">@drawable/tab_text</item>
+        <item name="android:textSize">3pt</item>
+    </style>
+
+    <style name="ActionBar.Transparent.Example" parent="@style/Widget.Sherlock.Light.ActionBar">
+        <item name="background">@drawable/ab_transparent_example</item>
+        <item name="progressBarStyle">@style/ProgressBar.Example</item>
+    </style>
+
+    <style name="PopupMenu.Example" parent="@style/Widget.Sherlock.Light.ListPopupWindow">
+        <item name="android:popupBackground">@drawable/menu_dropdown_panel_example</item>
+    </style>
+
+    <style name="DropDownListView.Example" parent="@style/Widget.Sherlock.Light.ListView.DropDown">
+        <item name="android:listSelector">@drawable/selectable_background_example</item>
+    </style>
+
+    <style name="ActionBarTabStyle.Example" parent="@style/Widget.Sherlock.Light.ActionBar.TabView">
+        <item name="android:background">@drawable/tab_indicator_ab_example</item>
+        <item name="android:layout_width">0dip</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:minWidth">10dip</item>
+    </style>
+
+    <style name="DropDownNav.Example" parent="@style/Widget.Sherlock.Light.Spinner.DropDown.ActionBar">
+        <item name="android:background">@drawable/spinner_background_ab_example</item>
+        <item name="android:popupBackground">@drawable/menu_dropdown_panel_example</item>
+        <item name="android:dropDownSelector">@drawable/selectable_background_example</item>
+    </style>
+
+    <style name="ProgressBar.Example" parent="@style/Widget.Sherlock.Light.ProgressBar.Horizontal">
+        <item name="android:progressDrawable">@drawable/progress_horizontal_example</item>
+    </style>
+
+    <style name="ActionButton.CloseMode.Example" parent="@style/Widget.Sherlock.Light.ActionButton.CloseMode">
+        <item name="android:background">@drawable/btn_cab_done_example</item>
+    </style>
+
+    <!-- this style is only referenced in a Light.DarkActionBar based theme -->
+    <style name="Theme.Example.Widget" parent="@style/Theme.Sherlock">
+        <item name="popupMenuStyle">@style/PopupMenu.Example</item>
+        <item name="dropDownListViewStyle">@style/DropDownListView.Example</item>
+    </style>
 </resources>
